# snakemake-software-deployment-plugin-spack

./: pyproject.toml
src/snakemake_software_deployment_plugin_spack/: __init__.py  conda_for_comparison.py
