[project]
name = "snakemake-software-deployment-plugin-spack"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["snakemake-interface-common (>=1.17.4,<2.0.0)", "snakemake-interface-software-deployment-plugins (>=0.6.1,<0.7.0)"]
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/software-deployment/spack.html"
[[project.authors]]
name = "Marco"
email = "mirco.masera@gmail.com"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
[[tool.poetry.packages]]
include = "snakemake_software_deployment_plugin_spack"
from = "src"


[tool.poetry.group.dev.dependencies]
ruff = "^0.10.0"
coverage = "^7.6.12"
pytest = "^8.3.5"

